--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":"8.0.0",
-    "npm":"5.0.3"
+    "node": "8.0.0",
+    "npm": "5.0.3"
   },
   "scripts": {
-   "start": "node index.js"
+    "start": "node index.js",
+    "dev":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "aws": "0.0.3-2",
+    "express": "^4.15.3",
+    "heroku-cli": "^6.13.5",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
