--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws": "0.0.3-2",
+    "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
     "heroku-cli": "^6.13.5",
+    "mongoose": "^4.11.5",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-google-oauth20": "^1.0.0"
